rust2/src/snapshots/brainfuck__parse__tests__nested_loop.snap
---
source: src/parse.rs
assertion_line: 164
expression: instrs
---
Ok(
    [
        (
            Add,
            Span {
                start: 0,
                len: 1,
            },
        ),
        (
            Loop(
                [
                    (
                        Sub,
                        Span {
                            start: 2,
                            len: 1,
                        },
                    ),
                    (
                        Loop(
                            [
                                (
                                    Sub,
                                    Span {
                                        start: 4,
                                        len: 1,
                                    },
                                ),
                                (
                                    Loop(
                                        [
                                            (
                                                Sub,
                                                Span {
                                                    start: 6,
                                                    len: 1,
                                                },
                                            ),
                                        ],
                                    ),
                                    Span {
                                        start: 5,
                                        len: 3,
                                    },
                                ),
                            ],
                        ),
                        Span {
                            start: 3,
                            len: 6,
                        },
                    ),
                    (
                        Add,
                        Span {
                            start: 9,
                            len: 1,
                        },
                    ),
                    (
                        Right,
                        Span {
                            start: 10,
                            len: 1,
                        },
                    ),
                    (
                        Right,
                        Span {
                            start: 11,
                            len: 1,
                        },
                    ),
                    (
                        Right,
                        Span {
                            start: 12,
                            len: 1,
                        },
                    ),
                ],
            ),
            Span {
                start: 1,
                len: 13,
            },
        ),
    ],
)
